--- a/go-cqhttp/config.sample.json
+++ b/go-cqhttp/config.sample.json
@@ -1,6 +1,6 @@
 {
-	"uin": 243249439,
-	"password": "wei0621))(",
+	"uin": 0,
+	"password": "",
 	"encrypt_password": false,
 	"password_encrypted": "",
 	"enable_db": true,
