--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,6 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+node_modules
+go-cqhttp
 
-# compiled output
-/dist
-/tmp
-/out-tsc
+logs/*.log
 
-# dependencies
-/node_modules
-
-# profiling files
-chrome-profiler-events.json
-speed-measure-plugin.json
-
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-*.iml
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
-
-# System Files
-.DS_Store
-Thumbs.db
-tsconfig.json
+koishi.config.ts
