--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^12.5.0",
     "koishi": "^2.4.2",
     "koishi-adapter-cqhttp": "^1.0.7",
+    "mime": "^2.4.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   }
