--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.16",
     "jest": "^26.6.3",
+    "koishi-test-utils": "^5.0.3",
     "ts-jest": "^26.4.4"
   }
 }
