--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bufferutil": "^4.0.2",
     "dayjs": "^1.9.6",
     "discord.js": "^12.5.1",
+    "file-type": "^16.0.1",
     "koishi": "^2.4.2",
     "koishi-adapter-cqhttp": "^1.0.7",
     "md5": "^2.3.0",
