--- a/package.json
+++ b/package.json
@@ -37,11 +37,15 @@
     "koishi-adapter-cqhttp": "^1.0.7",
     "md5": "^2.3.0",
     "mime": "^2.4.6",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.0",
     "ts-node": "^9.0.0",
+    "typeorm": "^0.2.29",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
     "@types/jest": "^26.0.16",
+    "@types/node": "^14.14.10",
     "jest": "^26.6.3",
     "koishi-test-utils": "^5.0.3",
     "ts-jest": "^26.4.4"
