feat: 装饰discord同步到qq消息的用户信息

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "bufferutil": "^4.0.2",
+    "canvas": "^2.6.1",
     "dayjs": "^1.9.6",
     "discord.js": "^12.5.1",
     "file-type": "^16.0.1",
