--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dayjs": "^1.9.6",
     "discord.js": "^12.5.1",
     "file-type": "^16.0.1",
+    "got": "^11.8.1",
     "koishi": "^2.4.2",
     "koishi-adapter-cqhttp": "^1.0.7",
     "md5": "^2.3.0",
