--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - shell: bash
+    - name: Run Test
       run: |
         echo export default {} as any > koishi.config.ts
         npm ci
