--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,8 +30,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Run Test
-      run: |
-        echo export default {} as any > koishi.config.ts
-        npm ci
-        npm test
-        npm run build --if-present
+    - run: echo export default {} as any > koishi.config.ts
+    - run: npm ci
+    - run: npm test
+    - run: npm run build --if-present
