--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Run Test
-    - run: echo export default {} as any > koishi.config.ts
+      run: echo export default {} as any > koishi.config.ts
     - run: npm ci
     - run: npm test
     - run: npm run build --if-present
