--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "@nestjs/core": "^7.6.13",
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/typeorm": "^7.1.5",
+    "@octokit/webhooks": "^9.4.0",
+    "@octokit/webhooks-definitions": "^3.67.3",
     "axios": "^0.21.0",
     "canvas": "^2.6.1",
     "dayjs": "^1.9.6",
     "discord.js": "^12.5.3",
-    "el-bot": "^0.7.0-alpha.2",
+    "el-bot": "^0.8.0-beta.5",
     "fast-xml-parser": "^3.17.6",
     "file-type": "^16.0.1",
     "got": "^11.8.1",
