feat: 增加开黑啦同步消息功能

--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "fast-xml-parser": "^3.17.6",
     "file-type": "^16.0.1",
     "got": "^11.8.1",
-    "koishi": "^2.4.2",
-    "koishi-adapter-cqhttp": "^1.0.7",
+    "kaiheila-bot-root": "^0.2.9",
+    "kaiheilajs": "^3.9.5",
+    "koishi": "^3.14.1",
+    "koishi-adapter-kaiheila": "^1.2.1",
     "md5": "^2.3.0",
     "mime": "^2.4.6",
     "reflect-metadata": "^0.1.13",
