--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "axios": "^0.21.0",
     "canvas": "^2.6.1",
     "dayjs": "^1.9.6",
+    "discord-markdown": "^2.5.0",
     "discord.js": "^12.5.3",
     "el-bot": "^0.8.0-beta.5",
     "fast-xml-parser": "^3.17.6",
@@ -66,7 +67,6 @@
     "typeorm": "^0.2.31"
   },
   "devDependencies": {
-    "koishi-test-utils": "^5.0.3",
     "@nestjs/cli": "^7.5.6",
     "@nestjs/schematics": "^7.2.7",
     "@nestjs/testing": "^7.6.13",
@@ -80,6 +80,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
+    "koishi-test-utils": "^5.0.3",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.2",
