Revert "[WIP] Release: REL3_0 Version 3.0.0"

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,7 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true,
-    "noEmitOnError": true
+    "incremental": true
   },
   "exclude": [
     "node_modules"
