--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nestjs/common": "^7.6.13",
     "@nestjs/core": "^7.6.13",
     "@nestjs/platform-express": "^7.6.13",
+    "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^7.1.5",
     "@octokit/webhooks": "^9.4.0",
     "@octokit/webhooks-definitions": "^3.67.3",
