--- a/.gitignore
+++ b/.gitignore
@@ -35,11 +35,12 @@ lerna-debug.log*
 
 go-cqhttp
 
-cache
-config.json
-config.dev.json
-config.prod.json
-src/koishi.config.ts
-src/koishi.config.prod.ts
-src/el.config.ts
-src/el.config.prod.ts
+/cache
+/config.json
+/config.dev.json
+/config.prod.json
+/src/koishi.config.ts
+/src/koishi.config.prod.ts
+/src/el.config.ts
+/src/el.config.prod.ts
+/mcl/bots/**
