--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         restart: always
         privileged: 'true'
         volumes:
-            - ./mcl-1.1.0-beta.1:/bridge/mcl
+            - ./mcl:/bridge/mcl
             - ./cache:/bridge/cache
         working_dir: /bridge/mcl
         command: java -jar mcl.jar -u
