--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "discord-qq-bridge",
   "version": "3.0.0",
   "description": "",
-  "main": "main.ts",
+  "bugs": {
+    "url": "https://github.com/rabbitkiller-dev/discord-qq-bridge/issues"
+  },
+  "license": "ISC",
+  "author": "",
+  "main": "src/main.ts",
+  "repository": "github:rabbitkiller-dev/discord-qq-bridge",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -18,8 +24,6 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
-  "author": "",
-  "license": "ISC",
   "jest": {
     "moduleFileExtensions": [
       "js",
@@ -38,55 +42,56 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.13",
-    "@nestjs/core": "^7.6.13",
-    "@nestjs/platform-express": "^7.6.13",
-    "@nestjs/serve-static": "^2.2.2",
-    "@nestjs/typeorm": "^7.1.5",
-    "@octokit/webhooks": "^9.4.0",
-    "@octokit/webhooks-definitions": "^3.67.3",
-    "axios": "^0.21.0",
-    "canvas": "^2.6.1",
-    "dayjs": "^1.9.6",
-    "discord-markdown": "^2.5.0",
-    "discord.js": "^12.5.3",
-    "el-bot": "^0.9.0-beta.3",
-    "fast-xml-parser": "^3.17.6",
-    "file-type": "^16.0.1",
-    "got": "^11.8.1",
+    "@nestjs/common": "^9.2.1",
+    "@nestjs/core": "^9.2.1",
+    "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/serve-static": "^3.0.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "@octokit/webhooks": "^10.3.1",
+    "axios": "^1.2.1",
+    "canvas": "^2.10.2",
+    "dayjs": "^1.11.7",
+    "discord-markdown": "^2.5.1",
+    "discord.js": "^14.7.1",
+    "el-bot": "^0.9.0-beta.19",
+    "fast-xml-parser": "^4.0.12",
+    "file-type": "^18.0.0",
+    "got": "^12.5.3",
     "kaiheila-bot-root": "^0.2.9",
-    "koishi": "^3.14.1",
+    "koishi": "^4.10.4",
     "koishi-adapter-kaiheila": "^1.2.1",
     "md5": "^2.3.0",
-    "mime": "^2.4.6",
+    "mime": "^3.0.0",
+    "mirai-ts": "^2.4.3",
     "reflect-metadata": "^0.1.13",
+    "request": "^2.88.2",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
+    "rxjs": "^7.6.0",
     "shortid": "^2.2.16",
-    "sqlite3": "^5.0.2",
-    "typeorm": "^0.2.31"
+    "sqlite3": "^5.1.2",
+    "typeorm": "^0.3.11"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.6",
-    "@nestjs/schematics": "^7.2.7",
-    "@nestjs/testing": "^7.6.13",
-    "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.31",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
-    "eslint": "^8.27.0",
+    "@nestjs/cli": "^9.1.5",
+    "@nestjs/schematics": "^9.0.3",
+    "@nestjs/testing": "^9.2.1",
+    "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.11",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
+    "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "jest": "^26.6.3",
-    "koishi-test-utils": "^5.0.3",
-    "prettier": "^2.2.1",
-    "supertest": "^6.1.3",
-    "ts-jest": "^26.5.2",
-    "ts-loader": "^8.0.17",
-    "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.5"
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.3.1",
+    "koishi-test-utils": "^7.0.2",
+    "prettier": "^2.8.0",
+    "supertest": "^6.3.2",
+    "ts-jest": "^29.0.3",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.1",
+    "typescript": "^4.9.3"
   }
 }
