--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,12 +11,13 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [ 14.x ]
+        node-version: [ 14, 16, 18 ]
+
+    name: build-node${{ matrix.node-version }}
 
     steps:
     - name: Checkout
