--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,7 @@
 
 name: Node.js CI
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [ push, pull_request ]
 
 jobs:
   build:
@@ -32,6 +28,7 @@ jobs:
 
     - name: Run Test
       run: echo export default {} as any > koishi.config.ts
+    - run: npm install
     - run: npm ci
     - run: npm test
     - run: npm run build --if-present
