--- a/mcl/config/Console/AutoLogin.yml
+++ b/mcl/config/Console/AutoLogin.yml
@@ -7,8 +7,9 @@ accounts:
       # 密码内容, PLAIN 时为密码文本, MD5 时为 16 进制
       value: pwd
     # 账号配置. 可用配置列表 (注意大小写):
-    # "protocol": "ANDROID_PHONE" / "ANDROID_PAD" / "ANDROID_WATCH"
+    # "protocol": "ANDROID_PHONE" / "ANDROID_PAD" / "ANDROID_WATCH" /"MAC" / "IPAD"
     # "device": "device.json"
+    # "enable": true
     configuration: 
       protocol: ANDROID_PHONE
       device: device.json
